unpackaged/main/default/objects/Seller_Portal_To_Do_List_Item__mdt/Seller_Portal_To_Do_List_Item__mdt.object-meta.xml
<CustomObject>
    <description>Defines a single Item to be used on lwcSEPToDoList with a count and redirect link. Items can be either a parent/aggregate or a child. Clicking on a parent/aggregate item should take you to a page with the same component displaying the parent&#39;s child records whose sum should equal the total of the parent.</description>
    <label>Seller Portal To Do List Item</label>
    <pluralLabel>Seller Portal To Do List Items</pluralLabel>
</CustomObject>