unpackaged/main/default/objects/Seller_Portal_To_Do_List_Item__mdt/fields/Item_Plural_Label__c.field-meta.xml
<CustomField>
    <fullName>Item_Plural_Label__c</fullName>
    <description>The label shown when the total is &gt; 1 for non aggregate items. It is always shown for aggregate (parent) items</description>
    <inlineHelpText>The label shown when the total is &gt; 1 for non aggregate items. It is always shown for aggregate (parent) items</inlineHelpText>
    <label>Item Plural Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>