unpackaged/main/default/objects/Seller_Portal_To_Do_List_Item__mdt/fields/Item_Singular_Label__c.field-meta.xml
<CustomField>
    <fullName>Item_Singular_Label__c</fullName>
    <description>The label shown when the total is &lt;= 1 for non aggregate (non parent) items.</description>
    <inlineHelpText>The label shown when the total is &lt;= 1 for non aggregate (non parent) items.</inlineHelpText>
    <label>Item Singular Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>