unpackaged/main/default/objects/Seller_Portal_To_Do_List_Item__mdt/fields/Order__c.field-meta.xml
<CustomField>
    <fullName>Order__c</fullName>
    <description>The order in which the item is shown, starting from 0</description>
    <inlineHelpText>The order in which the item is shown, starting from 0</inlineHelpText>
    <label>Order</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>