unpackaged/main/default/objects/Seller_Portal_To_Do_List_Item__mdt/fields/Parent_Item__c.field-meta.xml
<CustomField>
    <fullName>Parent_Item__c</fullName>
    <description>If this is null, the item is a parent/aggregate. Otherwise should be populated with the DeveloperName of a parent  To Do List Item so it is included in the parent&#39;s total and appears on its respective breakdown page</description>
    <inlineHelpText>If this is null, the item is a parent/aggregate. Otherwise should be populated with the DeveloperName of a parent  To Do List Item so it is included in the parent&#39;s total and appears on its respective breakdown page</inlineHelpText>
    <label>Parent Item</label>
    <length>255</length>
    <type>Text</type>
</CustomField>