unpackaged/main/default/objects/Seller_Portal_To_Do_List_Item__mdt/fields/Query__c.field-meta.xml
<CustomField>
    <fullName>Query__c</fullName>
    <description>The SOQL query that returns the count, needs to start with COUNT(). Will be null for parent/aggregate items</description>
    <inlineHelpText>The SOQL query that returns the count, needs to start with COUNT(). Will be null for parent/aggregate items</inlineHelpText>
    <label>Query</label>
    <length>255</length>
    <type>Text</type>
</CustomField>