unpackaged/main/default/objects/Seller_Portal_To_Do_List_Item__mdt/fields/Required_Access_Level__c.field-meta.xml
<CustomField>
    <fullName>Required_Access_Level__c</fullName>
    <description>References a Seller Portal Seller record DeveloperName  which contains the query WHERE clause to restrict visibility of the item</description>
    <inlineHelpText>References a Seller Portal Seller record DeveloperName which contains the query WHERE clause to restrict visibility of the item</inlineHelpText>
    <label>Required Access Level</label>
    <length>255</length>
    <type>Text</type>
</CustomField>