unpackaged/main/default/objects/Seller_Portal_To_Do_List_Item__mdt/fields/Target_URL__c.field-meta.xml
<CustomField>
    <fullName>Target_URL__c</fullName>
    <description>The url the item should redirect to</description>
    <inlineHelpText>The url the item should redirect to</inlineHelpText>
    <label>Target URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>